--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-md5",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "add md5 to filename",
   "main": "index.js",
   "scripts": {
@@ -15,7 +15,8 @@
     "gulp-md5"
   ],
   "dependencies": {
-    "gulp-util": "~2.2.14",
+    "fancy-log": "~1.3.3",
+    "plugin-error": "~1.0.1",
     "through2": "^0.4.1"
   },
   "homepage": "https://github.com/Raistlin916/gulp-md5.git",
